--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -31,6 +31,15 @@
       {% if author.email %}
         <li><a href="mailto:{{ author.email }}"><i class="fas fa-fw fa-envelope" aria-hidden="true"></i> Email</a></li>
       {% endif %}
+      {% raw %}{% if author.phone %}
+  <li>
+    <a href="tel:{{ author.phone | replace: ' ', '' | replace: '(', '' | replace: ')', '' | replace: '-', '' }}">
+      <i class="fas fa-fw fa-phone" aria-hidden="true"></i>
+      <span itemprop="telephone">{{ author.phone }}</span>
+    </a>
+  </li>
+{% endif %}{% endraw %}
+
       {% if author.keybase %}
         <li><a href="https://keybase.io/{{ author.keybase }}"><i class="fas fa-fw fa-key" aria-hidden="true"></i> Keybase</a></li>
       {% endif %}
